syntax = "proto3";

package pb;

import "api/proto/google/api/annotations.proto";
import "api/proto/common_service.proto";

option go_package = "api/proto";

message GetProductRequest {
    string merchant_id = 1;
}

message GetProductByIdRequest {
    string merchant_id = 1;
    string product_id = 2;
}

service ProductService {
    rpc GetProducts (GetProductRequest) returns (GetProductsResponse) {
        option (google.api.http) = {
            get: "/product"
        };
    }

    rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse) {
        option (google.api.http) = {
            get: "/product/{product_id}"
        };
    }
}